packages/ui/app/src/css/components.scss
@layer components {
    .fern-prose {
        @apply prose dark:prose-invert prose-h1:mt-[1.5em] first:prose-h1:mt-0 break-words;
    }

    .fern-search-bar {
        @apply cursor-pointer;
        @apply text-sm border-default flex items-center rounded-lg border-none px-2.5 py-2 t-muted;
        @apply bg-tag-default;
        @apply hover:bg-tag-default-hover transition-[background,shadow];
        @apply ring-inset ring-default hover:ring-default ring-1;
        @apply max-sm:h-10 max-sm:text-base;

        .search-placeholder {
            @apply inline-flex flex-1 items-center space-x-2.5;

            span {
                @apply text-faded;
            }
        }

        .keyboard-shortcut-hint {
            @apply t-muted ring-card-border shadow-card-light inline-flex size-5 items-center justify-center rounded ring-1 font-mono text-xs leading-none;
            @apply dark:shadow-card-dark bg-card;
        }

        &:hover .keyboard-shortcut-hint {
            @apply ring-card-border;
        }

        &:disabled {
            @apply shadow-none bg-tag-default-soft cursor-default;
        }
    }

    .fern-sidebar-heading {
        @apply flex min-h-[32px] lg:min-h-[36px] mb-1;
    }

    .fern-sidebar-group {
        @apply list-none;
        @apply max-lg:-mx-4;

        .fern-sidebar-group {
            @apply max-lg:mx-0;
        }
    }

    .fern-sidebar-item {
        @apply scroll-my-32;
    }

    .fern-sidebar-link-container {
        @apply items-stretch relative flex min-h-[36px];
        @apply data-[state=active]:t-accent-aaa;
        @apply data-[state=inactive]:hover:t-accent-aaa;

        &:not(.top-level) {
            @apply data-[state=inactive]:t-muted;
        }
    }

    .fern-sidebar-link-indent {
        @apply relative flex-none w-4 lg:w-3 shrink-0 border-l;
    }

    .fern-sidebar-link-container[data-state="active"] .fern-sidebar-link-indent {
        @apply border-border-concealed md:border-border-accent-muted;
    }

    .fern-sidebar-link-container[data-state="inactive"] .fern-sidebar-link-indent {
        @apply border-border-concealed md:border-default lg:opacity-60;
    }

    .fern-sidebar-link {
        @apply text-left relative inline-flex flex-1 content-between items-stretch lg:px-3 max-lg:px-4;
        @apply max-lg:rounded-none lg:rounded-lg;
    }

    .fern-sidebar-link-container[data-state="active"] .fern-sidebar-link {
        @apply bg-tag-primary;
    }

    .fern-sidebar-link-container[data-state="inactive"] .fern-sidebar-link {
        @apply hover:bg-tag-default transition-colors;
    }

    .fern-sidebar-link-content {
        @apply inline-flex flex-1 items-start py-2.5 sm:py-2;
    }

    .fern-sidebar-link-text {
        @apply flex-1 text-base leading-6 lg:text-sm lg:leading-5;
    }

    .fern-sidebar-link-expand {
        @apply relative flex w-10 lg:w-6 justify-center items-center transition-colors rounded-none ease-out;
        @apply lg:rounded-lg;

        &:last-child {
            @apply flex -mr-3 ml-1;
        }
    }

    .fern-sidebar-link-expand[data-state="active"] {
        @apply after:content-[''] after:absolute after:inset-1 after:rounded-xl lg:after:rounded-md after:bg-tag-primary t-accent after:pointer-events-none;
    }

    .fern-mdx-link {
        @apply hover:t-accent underline underline-offset-4 decoration-1 hover:decoration-2 decoration-accent-aa;
        @apply font-semibold;

        h1 &,
        h2 &,
        h3 &,
        h4 &,
        h5 &,
        h6 & {
            font-weight: inherit;
        }

        svg.external-link-icon {
            @apply ml-0.5 inline-block t-muted;
        }

        &:hover {
            svg.external-link-icon {
                @apply t-accent;
            }
        }
    }

    .fern-api-property {
        @apply py-4 space-y-4;
    }

    .fern-api-property-header {
        @apply flex items-baseline gap-2;
    }

    .fern-api-property-key {
        @apply font-mono t-default font-semibold text-sm;
    }

    .fern-api-property-meta {
        @apply text-inherit inline-flex items-baseline gap-2 text-xs;
    }

    .custom-backdrop [data-rmiz-modal-overlay="visible"] {
        @apply bg-text-default/20;
    }

    .fern-page-heading {
        @apply my-0 inline-block leading-tight;

        text-wrap: balance;
    }
}

